fix: align CSS selector with HTML id for error messages

--- a/main.css
+++ b/main.css
@@ -110,7 +110,7 @@ ul li:last-child {
   margin-top: 0rem;
 }
 
-.error-message {
+#error-messages {
   background-color: #f7d7da;
   color: #720c24;
   padding: 1.75rem;
